--- a/Tesla_Stock_Forecasting_Multi_Step_Stacked_LSTM_Networks_fixed.ipynb
+++ b/Tesla_Stock_Forecasting_Multi_Step_Stacked_LSTM_Networks_fixed.ipynb
@@ -4979,7 +4979,7 @@
    "source": [
     "<a name='B'>\n",
     "       \n",
-    "<div style=\"padding: 15px; color: white; font-size: 250%; font-family: Tahoma; text-align: center; display:fill; border-radius: 50px; background-color: red; margin-bottom: 0px;\"><b><span style='color: white'>👍🏼 If you found this helpful, leave a like, Thank you! 👍🏼 <br> 😄 I look forward to your feedback 😄 </b></div>\n",
+    "<div style=\"padding: 15px; color: white; font-size: 250%; font-family: Tahoma; text-align: center; display:fill; border-radius: 50px; background-color: cyan; margin-bottom: 0px;\"><b><span style='color: white'> Thanks </b></div>\n",
     "    \n",
     "    \n",
     "## &#8711; <span style='color:red'>|</span> Table of Contents\n",
